# clawback

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  parser_case.yml
.github/workflows/: ci.yml  oracle.yml
deploy/openclaw-skill/: SKILL.md
deploy/openclaw-skill/references/: ops.md  setup.md
src/clawback/: __init__.py  audit.py  cli.py  commands.py  fx.py  ledger.py  models.py  parser.py  sheets.py  state.py  templates.py
tests/: __init__.py  conftest.py  test_audit.py  test_cli.py  test_commands.py  test_fx.py  test_ledger.py  test_models.py  test_oracle.py  test_parser.py  test_sheets.py  test_state.py  test_templates.py
tests/fixtures/: oracle_cases.jsonl  oracle_results.md
